Replace collect(toList()) with toList() in stream operations